Fixing some endian-ness bugs for color management - bug 439704. r=vlad